# brainrot

./: .gitignore  README.md  testsprite_hackathon_video_script.md
Backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml
Backend/brainrot_backend/: __init__.py  auth.py  config.py  container.py  main.py
Backend/brainrot_backend/core/: __init__.py
Backend/brainrot_backend/recommendation_system/: __init__.py  routes.py  service.py
Backend/scripts/: benchmark_producer_modes.py  verify_producer_anchor_fix.py  verify_source_unavailable_flow.py
Backend/sql/: schema.sql
Backend/supabase/: config.toml
Backend/tests/: test_agents.py  test_api.py  test_asset_selector.py  test_elevenlabs_alignment.py  test_firecrawl_client.py  test_firecrawl_ranking.py  test_producer_crewai.py  test_subtitles.py
Backend/testsprite_tests/: TC001_get_health_endpoint.py  TC002_post_v1_batches_create_batch.py  TC003_post_v1_batches_validation_errors.py  TC004_get_v1_batches_uuid_validation_and_404.py  TC005_get_v1_batches_sse_events.py  TC006_post_v1_assets_upload.py  TC007_post_v1_assets_upload_validation.py  TC008_post_v1_agents_bootstrap.py  TC009_post_v1_agents_webhooks_elevenlabs_signature.py  TC010_post_v1_chats_create_chat.py  TC011_get_v1_chats_list_and_get_single.py  TC012_get_v1_chats_chatid_errors.py  TC013_post_v1_chats_engagement_and_recommendations.py  TC014_post_v1_chats_engagement_errors.py  TC015_get_v1_video_edit_options.py  testsprite-mcp-test-report-full-backend-1.md  testsprite_backend_test_plan.json
website/: .env.example  (+7 more)
(+209 files in other folders)
